feat: update site

--- a/src/pages/study-materials/arabic/learn-arabic-by-watching-pictures.mdx
+++ b/src/pages/study-materials/arabic/learn-arabic-by-watching-pictures.mdx
@@ -53,4 +53,13 @@ import {
 - [শিক্ষা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1xQ6SI0L_mwTzgz-_sAUc6ciwREH_tFek/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 - [ধর্ম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1VqlY2mJwl1yxPiDu-80vqkNKxiwZ7tpr/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 
+<Video
+  videoSrcURL="https://www.youtube.com/embed/videoseries?list=PLN6GIGge5un9gKYMXvM0YtQrlO5_TlxGA"
+  videoTitle="Arabic Words with English Meaning and Pictures"
+  frameWidth="720px"
+  frameHeight="504px"
+  width="100%"
+  mt={4}
+/>
+
 </Box>
