feat: add new content

--- a/src/pages/study-materials/bengali/know-and-learn-bengali-letters.mdx
+++ b/src/pages/study-materials/bengali/know-and-learn-bengali-letters.mdx
@@ -6,6 +6,7 @@ import {
   SEO,
   Text,
   BookList,
+  Video,
 } from '../../../views/components';
 
 <SEO pageTitle="বাংলা বর্ণ চিনি ও বাংলা পড়তে শিখি (প্রেসেন্টেশন)" />
@@ -41,5 +42,15 @@ import {
 - [৯. ৎ - ঁ ডাউনলোড](https://docs.google.com/presentation/d/14NKa_DaWGaBkj3lZm85z_ws7lA_jSdbk/edit#slide=id.p1)
 - [১০. কার ও শব্দ গঠন - আকার-ঊকার ডাউনলোড](https://docs.google.com/presentation/d/1DAxNRrA6QM56AJ1Bf07ngBu24zHhmZP-/edit#slide=id.p1)
 - [১১. কার ও শব্দ গঠন - ঋকার-ঔকার ডাউনলোড](https://docs.google.com/presentation/d/1JV4vbgC6sOVAoWmOtgIRdvxXhpEGEbnP/edit#slide=id.p1)
+
+<Video
+  videoSrcURL="https://www.youtube.com/embed/FArIDxr45jM"
+  videoTitle="কীভাবে বাংলা পড়তে শেখাবেন"
+  frameWidth="720px"
+  frameHeight="504px"
+  width="100%"
+  mb={4}
+  mt={4}
+/>
 
 </Box>
