feat: update site

--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,5 +1,5 @@
 import { Helmet } from 'react-helmet';
-import { Box, Breadcrumb, Divider, SEO, Text } from '../views/components';
+import { Box, Breadcrumb, Divider, SEO, Text, Flex } from '../views/components';
 
 <SEO pageTitle="যোগাযোগ" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
@@ -16,6 +16,8 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../views/components';
 />
 <Divider />
 
+<Flex mx={[0, -2]} flexWrap="wrap" mt={3}>
+<Box width={[1, 1 / 2]} px={3} py={3}>
 বালক শাখা ও অফিস: ২১৯/৪/খ, ভিপি রোড, দক্ষিণ পীরেরবাগ (৬০ ফিট ভাঙ্গাব্রীজ সংলগ্ন), ঢাকা-১২১৬।
 
 বালিকা শাখা: ২৪৬/১/বি-৫/১, পশ্চিম আগারগাঁও (৬০ ফিট ভাঙ্গাব্রীজ ও ৬ তলা গার্মেন্টস সংলগ্ন), ঢাকা-১২০৭।
@@ -23,5 +25,11 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../views/components';
 মোবাইল: 01914-723676
 
 মেইল: madrasatulilm.contact@gmail.com
+
+</Box>
+<Box width={[1, 1 / 2]} px={3} py={3}>  
+ <img src={`/assets/images/map.jpeg`} alt={"map"} style={{width: '100%', height: "auto"}} />
+</Box>
+</Flex>
 
 </Box>
