--- a/src/pages/study-materials/arabic/learn-arabic-by-watching-pictures.mdx
+++ b/src/pages/study-materials/arabic/learn-arabic-by-watching-pictures.mdx
@@ -58,6 +58,7 @@ import {
 - [খেলাধূলা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/181009BiTEVG9xLlGfxNZ6HjYn1uR6SVN/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 - [স্বাস্থ ও চিকিৎসা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/18T4mCg_NM4oAQPycw_tIgJdtGaL2a_as/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 - [প্রযুক্তি বিষয়ক শব্দ (কম্পিউটারের যন্ত্রাংশ) এর প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1DBWsMKR8XDzH6fnn4DZYcRl6ddLW_529/edit?usp=drivesdk&ouid=106179897632712562234&rtpof=true&sd=true)
+- [ব্যক্তিত্ব ও চরিত্রসূচক বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1UDbViMMlyorU-BjerDi4zrtMin88x1rz/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 
 <Video
   videoSrcURL="https://www.youtube.com/embed/videoseries?list=PLN6GIGge5un9gKYMXvM0YtQrlO5_TlxGA"
