--- a/src/pages/study-materials/quran-and-hadith.mdx
+++ b/src/pages/study-materials/quran-and-hadith.mdx
@@ -33,17 +33,25 @@ import {
   হাদীস ও দু’আ সম্ভার
 </Text>
 
-ছোটদের জন্য সহজে মুখস্থ রাখা যায় এমন সহজ ও ছোট-ছোট হাদীস আর ‘হিসনুল মুসলিম’ থেকে বাছাই করা দু’আ নিয়ে আমরা করেছি এই ‘হাদীস ও দু’আ সম্ভার’ নামক সংকলনগুলো।
+ছোটদের জন্য সহজে মুখস্থ রাখা যায় এমন সহজ ও ছোট-ছোট হাদীস আর ‘হিসনুল মুসলিম’ থেকে বাছাই করা দু’আ নিয়ে আমরা করেছি এই ‘হাদীস ও দু’আ সম্ভার’ নামক সংকলনগুলো। A5 কাগজে (A4 এর অর্ধেক) বুকলেট আকারে প্রিন্ট করে বই বানিয়ে দিন।
 
-<Box textAlign="center">
+<Box textAlign="center" mb={3}>
   <a
-    href="https://drive.google.com/file/d/14pzW17efKSVAVqghGDhQ6kOvoiFvuqT_/view?usp=sharing"
+    href="https://drive.google.com/file/d/1ZypBJAJR_SJiue2p2Gnx_VdjAzgHOYAt/view?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
-    <Button variant="primary">
-      A5 কাগজে (A4 এর অর্ধেক) বুকলেট আকারে প্রিন্ট করে বই বানিয়ে দিন
-    </Button>
+    <Button variant="primary">হাদীস ও দু'আ সম্ভার-১</Button>
+  </a>
+</Box>
+
+<Box textAlign="center">
+  <a
+    href="https://drive.google.com/file/d/1fIgCcN24kc2bn1QomO_B_tytdqNz7d19/view?usp=sharing"
+    target="_blank"
+    rel="noreferrer noopener"
+  >
+    <Button variant="primary">হাদীস ও দু'আ সম্ভার-২</Button>
   </a>
 </Box>
 
