--- a/src/pages/finance/expense-to-study-here.mdx
+++ b/src/pages/finance/expense-to-study-here.mdx
@@ -16,15 +16,18 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../../views/components';
   />
   <Divider />
 
-মান বজায় রাখতে মাদ্রাসাতুল ইলম ছাত্র বা ছাত্রীর সর্বোচ্চ সংখ্যা ২০ জন। ছাত্রছাত্রীর সংখ্যা কম হলেও তাদের পাঠদানে রয়েছেন ১ জন হাফিয, ১ জন ক্বারী, ১ জন আরবী ভাষা শিক্ষক, সাধারণ শিক্ষার জন্য ১ জন পুরুষ শিক্ষক ও বালিকা শাখার জন্য ১ জন মহিলা শিক্ষক। তাছাড়াও রয়েছেন একজন সার্বক্ষণিক তত্ত্বাবধায়ক।
+| বালক/বালিকা                 | আবাসিক/অনাবাসিক                                                              | বেতন ও খরচ\*                                                                                                                                                                                  |
+| --------------------------- | ---------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| বালক                        | আবাসিক                                                                       | **বেতন:**<br /> - প্লে-গ্রুপ: ১০০০ টাকা<br /> - নার্সারী থেকে ক্লাস-২: ১৫০০ টাকা<br /> - ক্লাস-৩ থেকে ক্লাস-৫: ২০০০ টাকা<br /><br /> **খাবার খরচ**: ২০০০ টাকা<br /> **বোর্ডিং ফি**: ১৫০০ টাকা |
+| বালক                        | অনাবাসিক<br /> (সময়: ফজরের পর থেকে যোহর পর্যন্ত এবং মাগরিব থেকে ইশা পর্যন্ত) | **বেতন:**<br /> - প্লে-গ্রুপ: ১০০০ টাকা<br /> - নার্সারী থেকে ক্লাস-২: ১৫০০ টাকা<br /> - ক্লাস-৩ থেকে ক্লাস-৫: ২০০০ টাকা<br /><br /> - সকালের নাস্তা: ৫০০ টাকা                                |
+| বালিকা শাখা                 | অনাবাসিক\*\*<br /> (সময়: সকাল থেকে যোহর পর্যন্ত)                             | **বেতন:**<br /> - প্লে-গ্রুপ: ১০০০ টাকা<br /> - নার্সারী থেকে ক্লাস-২: ১৫০০ টাকা<br /> - ক্লাস-৩ থেকে ক্লাস-৫: ২০০০ টাকা<br />                                                                |
+| বৈকালিক পার্ট-টাইম মাদ্রাসা |                                                                              | বেতন: ১০০০ টাকা                                                                                                                                                                               |
 
-মাদ্রাসাতুল ইলম কোন লাভজনক প্রতিষ্ঠান নয়। প্রতিষ্ঠানের খরচের উপর ভিত্তি করেই নির্ধারণ করা হয়েছে ছাত্রছাত্রীদের বেতন। মাদ্রাসাতুল ইলম এর ছাত্রছাত্রীদের বেতন নিম্নরূপ:
+#### ভর্তি ফি সবার জন্য ২০০০ টাকা
 
-- প্রতিটি আবাসিক ছাত্রের মাসিক বেতন ৪৫০০ টাকা
-- প্রতিটি অনাবাসিক ছাত্রের মাসিক বেতন ২৫০০ টাকা
-- প্রতিটি পার্ট-টাইম ছাত্রের মাসিক বেতন ৫০০ টাকা
-- বালিকা শাখার প্রতিটি ছাত্রীর মাসিক বেতন ১৫০০ টাকা
+##### আর প্রতি বছর নতুন করে আরো ১০০০ টাকা
 
-সামর্থ্যহীন পরিবার (সম্পূর্ণ বা আংশিক) মাসিক বেতন এর টাকার জন্য মাদ্রাসাতুল ইলম এর সাদাকাহ ফান্ড বরাবর আবেদন করতে পারেন।
+- সামর্থ্যহীন পরিবার (সম্পূর্ণ বা আংশিক) মাসিক বেতন এর টাকার জন্য মাদ্রাসাতুল ইলম এর গুরাবা ফান্ড বরাবর আবেদন করতে পারেন।
+- বালিকা শাখায় কোনো নাস্তার ব্যবস্থা না থাকায়, অভিভাবকরা ছাত্রীদের সাথে নাস্তা দিয়ে দিবেন। তবে বাইরে থেকে কেনা চটকদার মোড়কের কেইক, চিপ্স, চকলেট, কোমল পানীয় ইত্যাদি মাদ্রাসায় আনা নিষিদ্ধ।
 
 </Box>
