feat: update site

--- a/src/pages/finance/expense-to-study-here.mdx
+++ b/src/pages/finance/expense-to-study-here.mdx
@@ -20,7 +20,7 @@ import { Box, Breadcrumb, Divider, SEO, Text } from '../../views/components';
 | --------------------------- | ---------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | বালক                        | আবাসিক                                                                       | **বেতন:**<br /> - প্লে-গ্রুপ: ১০০০ টাকা<br /> - নার্সারী থেকে ক্লাস-২: ১৫০০ টাকা<br /> - ক্লাস-৩ থেকে ক্লাস-৫: ২০০০ টাকা<br /><br /> **খাবার খরচ**: ২০০০ টাকা<br /> **বোর্ডিং ফি**: ১৫০০ টাকা |
 | বালক                        | অনাবাসিক<br /> (সময়: ফজরের পর থেকে যোহর পর্যন্ত এবং মাগরিব থেকে ইশা পর্যন্ত) | **বেতন:**<br /> - প্লে-গ্রুপ: ১০০০ টাকা<br /> - নার্সারী থেকে ক্লাস-২: ১৫০০ টাকা<br /> - ক্লাস-৩ থেকে ক্লাস-৫: ২০০০ টাকা<br /><br /> - সকালের নাস্তা: ৫০০ টাকা                                |
-| বালিকা শাখা                 | অনাবাসিক\*\*<br /> (সময়: সকাল থেকে যোহর পর্যন্ত)                             | **বেতন:**<br /> - প্লে-গ্রুপ: ১০০০ টাকা<br /> - নার্সারী থেকে ক্লাস-২: ১৫০০ টাকা<br /> - ক্লাস-৩ থেকে ক্লাস-৫: ২০০০ টাকা<br />                                                                |
+| বালিকা শাখা                 | অনাবাসিক\*\*<br /> (সময়: সকাল থেকে যোহর পর্যন্ত এবং মাগরিব থেকে ইশা পর্যন্ত) | **বেতন:**<br /> - প্লে-গ্রুপ: ১০০০ টাকা<br /> - নার্সারী থেকে ক্লাস-২: ১৫০০ টাকা<br /> - ক্লাস-৩ থেকে ক্লাস-৫: ২০০০ টাকা<br />                                                                |
 | বৈকালিক পার্ট-টাইম মাদ্রাসা |                                                                              | বেতন: ১০০০ টাকা                                                                                                                                                                               |
 
 #### ভর্তি ফি সবার জন্য ২০০০ টাকা
