--- a/src/pages/study-materials/bengali/know-and-learn-bengali-letters.mdx
+++ b/src/pages/study-materials/bengali/know-and-learn-bengali-letters.mdx
@@ -32,7 +32,7 @@ import {
 নির্ধারিত ফি দিয়ে প্রেসেন্টেশনগুলো ডাউনলোড করতে কল বা হোয়াটস-আপ করুন এখানে: 01911-494547
 
 - [১. স্বরবর্ণ ডাউনলোড](https://docs.google.com/presentation/d/1Y052Cl_wAWar5UtnC0gAoM3QcnSau95o/edit#slide=id.p1)
-- [২. ক-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1FQy91rnzn5AyGMgmxF65rw9Pma5siPrX/edit)
+- [২. ক-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1-r912_cvc4xg3Y9HWMl9UPlvuRk84e5E/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
 - [৩. চ-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/131RIHU1X0sgZ3H5kb8kue0BsjPax5nqa/edit#slide=id.p1)
 - [৪. ট-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1F2Qb_vdM09Qs-aoJER04jBl1W5yHcpw6/edit#slide=id.p1)
 - [৫. ত-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1c2Lmt90Wv3gXae7RqK8QGo6oQzH_Lahm/edit#slide=id.p1)
