--- a/src/pages/study-materials/quran-and-hadith.mdx
+++ b/src/pages/study-materials/quran-and-hadith.mdx
@@ -76,12 +76,14 @@ import {
 </Box>
 
 <Text variant="h4" color="primary2">
-  কুর্‌আন
+  কুর্‌আন (মাদানী মুসহাফ)
 </Text>
+
+<Text>কুর্‌আন মাশক (ক্বারী আব্দুল ক্বাদীর উসমান এর কণ্ঠে)</Text>
 
 <Box textAlign="center">
   <a
-    href="https://drive.google.com/file/d/1Es6WlvTDqNhArEiSoY9Y0PfXGzHJauf0/view?usp=sharing"
+    href="https://drive.google.com/drive/folders/1f7zYQY2ov_PCy8OD5n-xMytC2huuBlY0?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -91,7 +93,7 @@ import {
 
 <Box textAlign="center" my={3}>
   <a
-    href="https://drive.google.com/file/d/1TrceQOPkIqwYQ9jZhO6xOMddVcTqhipr/view?usp=sharing"
+    href="https://drive.google.com/drive/folders/1CoJNuAxl4ZGeBO983jVUSl_Rysfa2Q7d?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
