feat: add new page

--- a/src/pages/study-materials/english/index.mdx
+++ b/src/pages/study-materials/english/index.mdx
@@ -27,6 +27,10 @@ import {
 <BookList
   books={[
     {
+      title: 'Learn English Alphabets with Words',
+      link: '/study-materials/english/learn-alphabets-with-words',
+    },
+    {
       title: 'ছবি দেখে ইংরেজী শব্দ শেখা',
       link: '/study-materials/english/learn-english-by-watching-pictures',
     },
