fix: update url

--- a/src/pages/study-materials/english/learn-alphabets-with-words.mdx
+++ b/src/pages/study-materials/english/learn-alphabets-with-words.mdx
@@ -27,15 +27,14 @@ import {
 <br />
 <br />
 
-- [A to D for kids](https://docs.google.com/presentation/d/1dCC7P-9gUs3Hy4dOR0vpXRdlg5LOzQ4B/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [E to H for kids](https://docs.google.com/presentation/d/1GR818KWE6xcvpNSVt_y7farJb5oojWuv/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [I to L for kids](
-https://docs.google.com/presentation/d/1aVn2AhQd1v559PNFCt9zXJg2gaeqKeRW/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true
-)
-- [M to P for kids](https://docs.google.com/presentation/d/15bMQEOhbTnfV47N4RN-NlBaSHhoC8InB/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [Q to T for kids](https://docs.google.com/presentation/d/1fCuEJREFCsjNBl6HyaZGmrI5OBcUC2uo/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [U to W for kids](https://docs.google.com/presentation/d/1GEBB_zn7zud5yJYJxaks0TjKsiEiQ4ON/edit?usp=drive_link&ouid=106179897632712562234&rtpof=true&sd=true)
-- [X to Z for kids](https://docs.google.com/presentation/d/1cM2BUZYd5XMgOfNwNey5WLETaVWwO3A_/edit?usp=drive_link&ouid=106179897632712562234&rtpof=true&sd=true)
+- <a href="https://docs.google.com/presentation/d/1dCC7P-9gUs3Hy4dOR0vpXRdlg5LOzQ4B/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true" target="_blank">A to D for kids</a>
+- <a href="https://docs.google.com/presentation/d/1GR818KWE6xcvpNSVt_y7farJb5oojWuv/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true" target="_blank">E to H for kids</a>
+- <a href="https://docs.google.com/presentation/d/1aVn2AhQd1v559PNFCt9zXJg2gaeqKeRW/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true" target="_blank">I to L for kids</a>
+- <a href="https://docs.google.com/presentation/d/15bMQEOhbTnfV47N4RN-NlBaSHhoC8InB/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true" target="_blank">M to P for kids</a>
+- <a href="https://docs.google.com/presentation/d/1fCuEJREFCsjNBl6HyaZGmrI5OBcUC2uo/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true" target="_blank">Q to T for kids</a>
+- <a href="https://docs.google.com/presentation/d/1GEBB_zn7zud5yJYJxaks0TjKsiEiQ4ON/edit?usp=drive_link&ouid=106179897632712562234&rtpof=true&sd=true" target="_blank">U to W for kids</a>
+- <a href="https://docs.google.com/presentation/d/1cM2BUZYd5XMgOfNwNey5WLETaVWwO3A_/edit?usp=drive_link&ouid=106179897632712562234&rtpof=true&sd=true" target="_blank">X to Z for kids</a>
+
 
 
 </Box>
