feat: add new pages

--- a/src/pages/study-materials/arabic/index.mdx
+++ b/src/pages/study-materials/arabic/index.mdx
@@ -31,7 +31,7 @@ import {
       link: '/study-materials/arabic/arabic-letters-with-examples',
     },
     {
-      title: `আরবী বর্ণ চিনি ও আরবী পড়তে শিখি (কায়দা মাক্কিয়াহ'র প্রেসেন্টেশন)`,
+      title: `আরবী বর্ণ চিনি ও আরবী পড়তে শিখি`,
       link: '/study-materials/arabic/arabic-letters-with-4-form-and-pictures',
     },
     {
