--- a/src/pages/study-materials/syllabus.mdx
+++ b/src/pages/study-materials/syllabus.mdx
@@ -35,23 +35,25 @@ import {
 </Text>
 
 - “শুধু কুর্‌আন হিফয-ই নয়, শিশু বয়স-ই দ্বীনের মৌলিক জ্ঞান অর্জনের উপযুক্ত সময়” এই পটভূমিতেই রচিত ‘মাদরাসাতুল ইলম’ এর ‘দ্বীনিয়াত শিক্ষা পাঠ্যক্রম’;
-- ‘শিশু থেকে শুরু করে চতুর্থ শ্রেণি পর্যন্ত মোট পাঁচটি শ্রেণি এই পাঠ্যক্রমের আওতাভুক্ত;
-- প্রতিটি শ্রেণির ব্যাপ্তিকাল আনুমানিক আট মাস;
+- ‘দ্বীনিয়াত লেভেল-শিশু’ থেকে শুরু করে ‘দ্বীনিয়াত লেভেল-৫’ পর্যন্ত মোট ছয়টি শ্রেণী এই পাঠ্যক্রমের আওতাভুক্ত;
 - কার্যক্রমটি মূলত ‘নূরানি ও নাযেরা’ বিভাগের ছাত্র/ছাত্রীদের জন্য প্রযোজ্য;
 - দ্বীনিয়াত পাঠ্যক্রমের মাধ্যমে একজন ছাত্র/ছাত্রী যা যা অর্জন করবে (ইন শা-আল্লাহ)-
   <ul style={{ marginLeft: '2rem', marginTop: '1rem', marginBottom: '1rem' }}>
     <li>শেষ দুই পারা কুর্‌আন হিফয</li>
     <li>২০০ ছোট ছোট ও ছন্দময় হাদীস হিফয</li>
     <li>‘হিসনুল মুসলিম’ থেকে প্রয়োজনীয় বেশ কিছু দু’আ হিফয</li>
-    <li>আককীদাহ, আদব ও ফিকহ এর জরূরী কিছু জ্ঞান</li>
+    <li>আক্বীদাহ, আদব ও ফিকহ এর জরূরী কিছু জ্ঞান</li>
     <li>আরবী ভাষার উপর প্রাথমিক দক্ষতা</li>
+    <li>
+      একজন ছাত্র/ছাত্রী ‘দ্বীনিয়াত লেভেল-৩’ সফলভাবে সমাপ্ত করার পর ‘দ্বীনিয়াত
+      লেভেল-হিফয’ এ উত্তীর্ণ হতে পারবে;
+    </li>
   </ul>
-- একজন ছাত্র/ছাত্রী ‘দ্বীনিয়াত পাঠ্যক্রম’ সফলভাবে সমাপ্তির মাধ্যমে ‘হিফয বিভাগে’ উত্তীর্ণ হতে পারবে;
 - শিক্ষক নিজস্ব দ্বীনি চেতনার আলোকে দ্বীন শিক্ষাকে মুখস্থ নির্ভর না করে প্রয়োগিকভাবে ছাত্র/ছাত্রীর কাছে পাঠ উপস্থাপন করবেন, এ-ই ‘মাদরাসাতুল ইলম’ এর প্রত্যাশা।
 
 <Box textAlign="center" mt={3}>
   <a
-    href="https://drive.google.com/file/d/1W4wRwu6vuIhKv9PeTwA_Ah7N4UkUVawU/view?usp=sharing"
+    href="https://drive.google.com/file/d/1-yhu6oarNBeWvSPxzPjSLhaWtswldWOf/view?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -74,7 +76,7 @@ import {
 
 <Box textAlign="center" mt={3}>
   <a
-    href="https://drive.google.com/file/d/1t3t9FRXlCQyvVowVeMGOPhGZxHQqD-pI/view?usp=sharing"
+    href="https://drive.google.com/file/d/16_-OE8XLy1wDQ-Diyd4oy9Z41QcKsIXV/view?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
