--- a/src/pages/study-materials/arabic/arabic-letters-with-4-form-and-pictures.mdx
+++ b/src/pages/study-materials/arabic/arabic-letters-with-4-form-and-pictures.mdx
@@ -10,11 +10,11 @@ import {
   Video,
 } from '../../../views/components';
 
-<SEO pageTitle="আরবী বর্ণ চিনি ও আরবী পড়তে শিখি (কায়দা মাক্কিয়াহ'র প্রেসেন্টেশন)" />
+<SEO pageTitle="আরবী বর্ণ চিনি ও আরবী পড়তে শিখি" />
 <Box maxWidth={960} margin="0 auto" padding={{ xs: 3, sm: 4 }}>
 
 <Text variant="h2" textAlign="center">
-  আরবী বর্ণ চিনি ও আরবী পড়তে শিখি (কায়দা মাক্কিয়াহ'র প্রেসেন্টেশন)
+  আরবী বর্ণ চিনি ও আরবী পড়তে শিখি
 </Text>
 <Divider />
 <Breadcrumb
@@ -26,12 +26,12 @@ import {
 />
 <Divider />
 
-কুরআন পড়তে শেখাতে যে বইটি শুরুতেই শিশুর হাতে তুলে দিতে হয়, তা হচ্ছে, ‘কায়দা বই’।‘মাদ্রাসাতুল ইল্‌ম’ এক্ষেত্রে ‘কায়দা মাক্কিয়াহ’ নামক কায়দা বইটি ব্যবহার করে থাকে। ‘মাদানী ছাপার মুসহাফ’টি পড়তে এই কায়দা বইটি বিশেষভাবে উপযোগী। এই পেইজ থেকে ‘কায়দা মাক্কিয়াহ’ বইটি এবং এর প্রতিটি অধ্যায়ের উপর নির্মিত প্রেসেন্টেশন ডাউনলোড করতে পারেন।
+কুরআন পড়তে শেখাতে যে বইটি শুরুতেই শিশুর হাতে তুলে দিতে হয়, তা হচ্ছে, ‘কায়দা বই’। ‘মাদ্রাসাতুল ইল্‌ম’ এক্ষেত্রে ‘কায়দা মাক্কিয়াহ’ নামক কায়দা বইটি ব্যবহার করে থাকে। ‘মাদানী ছাপার মুসহাফ’টি পড়তে এই কায়দা বইটি বিশেষভাবে উপযোগী। এই পেইজ থেকে ‘কায়দা মাক্কিয়াহ’ বইটি, বইয়ের প্রতিটি অধ্যায়ের উপর নির্মিত PowerPoint Presentation এবং বইয়ে ব্যবহৃত হরফ ও শব্দগুলোর সঠিক উচ্চারণ ডাউনলোড করতে পারেন।
 
 তাছাড়াও, নিচের ভিডিও’র প্লে-লিস্টে রয়েছে শিশুদের কায়দা পড়ানোর বিভিন্ন টেকনিক সম্বলিত বেশ কিছু ভিডিও।
 
 <Video
-  videoSrcURL="https://www.youtube.com/embed/videoseries?list=PLN6GIGge5un8mSh1HcZzXU2CogpV8TGTM"
+  videoSrcURL="https://www.youtube.com/embed/4GoAow6_4Ec?si=cYTz1Jur1XY1y6Sx"
   videoTitle="আরবী বর্ণ, তাদের ৪ টি রূপ ও ছবিসহ শব্দ (উচ্চারণ সহ)"
   frameWidth="720px"
   frameHeight="504px"
@@ -41,7 +41,7 @@ import {
 
 <Box textAlign="center" mb={4}>
   <a
-    href="https://drive.google.com/file/d/1-cPC2JCAX1sGlhf5hrKu8ta7DAW0QVX8/view?usp=sharing"
+    href="https://drive.google.com/file/d/16yaUNlOultDzt1Ql8WAjr9sFg0DBeY52/view?usp=sharing"
     target="_blank"
     rel="noreferrer noopener"
   >
@@ -49,24 +49,25 @@ import {
   </a>
 </Box>
 
-- [অধ্যায়-১. আরবী হরফ বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1o9QynIp5nBSovdQDvtTcvvQ1VPeATC-q?usp=sharing)
-- [অধ্যায়-২. যবর/ফাতহাহ বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1Vsn2lHYo_N19xaS2x9uhlTlGnxxvweBY?usp=sharing)
-- [অধ্যায়-৩. যের/কাসরাহ বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1i6YGG7tQYoY_mQOuyxv0BMnI0vl7ufj8?usp=sharing)
-- [অধ্যায়-৪. পেশ/দাম্মাহ বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1EIWJphZQ0X2WK21BwQ3sH-K-g7PAAKC_?usp=sharing)
-- [অধ্যায়-৫. জযম/সাকিন বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1xQrqqpJk8Oj6gNeu9IgLlCpoRtu_JjCt?usp=sharing)
-- [অধ্যায়-৬. মাদ্দি বিল আলিফ বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1i-OsmGJCrI1GEMy2GMFWRjw7Kgzvy3tk?usp=sharing)
-- [অধ্যায়-৭. মাদ্দু বিল ইয়া বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1cDjVvXejZ0Mls1-iUjjZ6SrZfQkGSqWB?usp=sharing)
-- [অধ্যায়-৮. মাদ্দু বিল ওয়াও বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1aZj72cQoatNq8SS9e0TtoH5iXieYkCJO?usp=sharing)
-- [অধ্যায়-৯. তানউইন বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1LsmT1SJUVtDjhdQAnWrve0vOveWhfZVU?usp=sharing)
-- [অধ্যায়-১০. তাশদীদ বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1M8w1ijO3aWw76tbqdi8ZO0-SokMtgqlq?usp=sharing)
-- [অধ্যায়-১১. তাশদীদ+তানউইন বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1zIvgbhBJRsdZ5fHP5p1vrSVuGrqexnN_?usp=sharing)
-- [অধ্যায়-১২. তাশদীদ+মাদ বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1QyGYfcLecNBTtGPT2V6kBcb2BgaWHXcA?usp=sharing)
-- [অধ্যায়-১৩. লামু আল কামরিয়া ও শামসিয়া বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1r6CDVXwcUr3M5-xhPHkWi_jlcwwqhtRM?usp=sharing)
-- [অধ্যায়-১৪. লাফাযুল জাল্লাতি বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1y2eOX-bH2Wx9BqE3lcFVcWgrCBKv8TDV?usp=sharing)
-- [অধ্যায়-১৫. হামযাতুল ওয়াসল বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1LUy9JYyqRpg2bmWCPb3D25a9Gq2yk5DB?usp=sharing)
-- [অধ্যায় ১৬. ইদগাম বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/1uUogGISWbgYQUs54uAc75XyMOTXb_pv0?usp=sharing)
-- [অধ্যায় ১৭. ইযহার বিষয়ক প্রেসেন্টেশন ডাউনলোড](https://drive.google.com/drive/folders/11EZuoO7a7S59Pm0PBxI-bot_vptFsh04?usp=sharing)
+<Text variant="h5" textAlign="center">
+  <a href="/study-materials/arabic/qaidah-makkiah-presentation">
+    কায়দা মাক্কিয়াহ বইয়ের PowerPoint Presentation ডাউনলোড
+  </a>
+</Text>
 
-### [মাদীনা মুসহাফ এবং মাজিদী বা ইন্দো-পাক মুসহাফের মধ্যে পার্থক্য](https://drive.google.com/file/d/1zzFpAJRjGw97DsmvEyfLt8D_cYGEVWuK/view?usp=sharing)
+<Text variant="h5" textAlign="center">
+  <a href="/study-materials/arabic/qaidah-makkiah-audio">
+    কায়দা মাক্কিয়াহ বইয়ের Audio Sound ডাউনলোড
+  </a>
+</Text>
+
+<Text variant="h5" textAlign="center">
+  <a
+    href="https://drive.google.com/file/d/1zzFpAJRjGw97DsmvEyfLt8D_cYGEVWuK/view?usp=sharing"
+    target="_blank"
+  >
+    মাদীনা মুসহাফ এবং মাজিদী বা ইন্দো-পাক মুসহাফের মধ্যে পার্থক্য
+  </a>
+</Text>
 
 </Box>
