--- a/src/pages/study-materials/bengali/know-and-learn-bengali-letters.mdx
+++ b/src/pages/study-materials/bengali/know-and-learn-bengali-letters.mdx
@@ -31,17 +31,106 @@ import {
 
 নির্ধারিত ফি দিয়ে প্রেসেন্টেশনগুলো ডাউনলোড করতে কল বা হোয়াটস-আপ করুন এখানে: 01911-494547
 
-- [১. স্বরবর্ণ ডাউনলোড](https://docs.google.com/presentation/d/1Y052Cl_wAWar5UtnC0gAoM3QcnSau95o/edit#slide=id.p1)
-- [২. ক-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1-r912_cvc4xg3Y9HWMl9UPlvuRk84e5E/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [৩. চ-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/131RIHU1X0sgZ3H5kb8kue0BsjPax5nqa/edit#slide=id.p1)
-- [৪. ট-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1F2Qb_vdM09Qs-aoJER04jBl1W5yHcpw6/edit#slide=id.p1)
-- [৫. ত-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1c2Lmt90Wv3gXae7RqK8QGo6oQzH_Lahm/edit#slide=id.p1)
-- [৬. প-বর্গ ডাউনলোড](https://docs.google.com/presentation/d/1sLoIY2rwSQOAfO2VY0Oe9tinH-kQSzre/edit#slide=id.p1)
-- [৭. য-স ডাউনলোড](https://docs.google.com/presentation/d/1XMmGLlDdb_TOYW4W6JxV89M4CE10NoKF/edit#slide=id.p1)
-- [৮. হ-য় ডাউনলোড](https://docs.google.com/presentation/d/1s0RD5pmiUitzYYjgE-XGahGWf3RQjW55/edit#slide=id.p1)
-- [৯. ৎ - ঁ ডাউনলোড](https://docs.google.com/presentation/d/14NKa_DaWGaBkj3lZm85z_ws7lA_jSdbk/edit#slide=id.p1)
-- [১০. কার ও শব্দ গঠন - আকার-ঊকার ডাউনলোড](https://docs.google.com/presentation/d/1DAxNRrA6QM56AJ1Bf07ngBu24zHhmZP-/edit#slide=id.p1)
-- [১১. কার ও শব্দ গঠন - ঋকার-ঔকার ডাউনলোড](https://docs.google.com/presentation/d/1JV4vbgC6sOVAoWmOtgIRdvxXhpEGEbnP/edit#slide=id.p1)
+<ul>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1Y052Cl_wAWar5UtnC0gAoM3QcnSau95o/edit#slide=id.p1"
+      target="_blank"
+    >
+      ১. স্বরবর্ণ ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1FQy91rnzn5AyGMgmxF65rw9Pma5siPrX/edit"
+      target="_blank"
+    >
+      ২. ক-বর্গ ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/131RIHU1X0sgZ3H5kb8kue0BsjPax5nqa/edit#slide=id.p1"
+      target="_blank"
+    >
+      ৩. চ-বর্গ ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1F2Qb_vdM09Qs-aoJER04jBl1W5yHcpw6/edit#slide=id.p1"
+      target="_blank"
+    >
+      ৪. ট-বর্গ ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1c2Lmt90Wv3gXae7RqK8QGo6oQzH_Lahm/edit#slide=id.p1"
+      target="_blank"
+    >
+      ৫. ত-বর্গ ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1sLoIY2rwSQOAfO2VY0Oe9tinH-kQSzre/edit#slide=id.p1"
+      target="_blank"
+    >
+      ৬. প-বর্গ ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1XMmGLlDdb_TOYW4W6JxV89M4CE10NoKF/edit#slide=id.p1"
+      target="_blank"
+    >
+      ৭. য-স ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1s0RD5pmiUitzYYjgE-XGahGWf3RQjW55/edit#slide=id.p1"
+      target="_blank"
+    >
+      ৮. হ-য় ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/14NKa_DaWGaBkj3lZm85z_ws7lA_jSdbk/edit#slide=id.p1"
+      target="_blank"
+    >
+      ৯. ৎ - ঁ ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1DAxNRrA6QM56AJ1Bf07ngBu24zHhmZP-/edit#slide=id.p1"
+      target="_blank"
+    >
+      ১০. কার ও শব্দ গঠন - আকার-ঊকার ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1JV4vbgC6sOVAoWmOtgIRdvxXhpEGEbnP/edit#slide=id.p1"
+      target="_blank"
+    >
+      ১১. কার ও শব্দ গঠন - ঋকার-ঔকার ডাউনলোড
+    </a>
+  </li>
+</ul>
+
+<Text color="#2b9348">
+  ⟐{'   '}
+  <a
+    href="https://drive.google.com/drive/folders/1nYFWuVmudIwSbxWIg74MTAJb6j3ldhGi?usp=sharing"
+    target="_blank"
+  >
+    বাংলা Worksheet (PDF) ডাউনলোড
+  </a>
+</Text>
 
 <Video
   videoSrcURL="https://www.youtube.com/embed/FArIDxr45jM"
