--- a/src/pages/study-materials/english/learn-english-by-watching-pictures.mdx
+++ b/src/pages/study-materials/english/learn-english-by-watching-pictures.mdx
@@ -34,24 +34,165 @@ import {
 
 এভাবে প্রশ্নও করা যেতে পারে, "What is this?"। তাহলেই বাচ্চারা প্রয়োজনীয় শব্দগুলো ইংরেজী ভাষাতেই আলাদা আলাদা ভাবে শিখবে, ইন শা আল্লাহ।
 
-- [আরবী হরফ দিয়ে শব্দের প্রেসেন্টেশন (আস সীরাত বইয়ের আলোকে) ডাউনলোড](https://docs.google.com/presentation/d/1bVOurJIRBmKorW0jKQe4Roon1j5ToOFt/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [পরিবার-আত্মীয়তা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1tymflpdl9L8i0lH0f6BDmc7AwDfhUamT/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [বাসাবাড়ি বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1MtJirwhf47gWR1Q99HjzBPLtG6Dx2PwD/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [বাথরুম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1aVmuAim5-M13Esa7xNDDsJkRASo2OOGV/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [রান্নাঘর বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1Z_EL7Rv6eYE-YPTDxZzu35bQGmWZaNsc/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [মানবদেহ বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1v26fFgChNagUhLCJ5WiQ1F-Cl7bZkH2a/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [খাদ্য বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1lSXNJyh2_6nX41te-xAldcRud1Oa3afD/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [ফল বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/16WYyQnrw9LQoUWXoa1YOthN2KSN8gxHB/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [শাকসবজি বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1sZ04fgn-U8ANk7Gze8CdcCi8mdUoTt9P/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [প্রাণী বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1pblm2w3Cq9yK_Cmeo3Ye9AUcUjXCxoFW/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [পাখি বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1nA7gLLP_nb_ZClkea2ttR5vOhAjP4g8U/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [মাছ, পোকা ও অন্যান্য বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1wxWCPyrVYVfAGIeyEflBkfq7AbiQfU8G/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [পোশাক ও সাজসজ্জা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1En5bqqVbenV5rmWYm3EF5-LBSdY8hK8K/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [রঙের নাম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1JHcRFtC-E-8rPnwOhlG28jrH7gpw3geP/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [যানবাহন বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1uFTIM5A5lhceZYLgL2EaflWzSGXvJQ6c/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [রাস্তাঘাট বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1t0fw8VcSeMOShh1nLHxusz7aeSE7_5DE/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [শিক্ষা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1xQ6SI0L_mwTzgz-_sAUc6ciwREH_tFek/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
-- [ধর্ম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড](https://docs.google.com/presentation/d/1VqlY2mJwl1yxPiDu-80vqkNKxiwZ7tpr/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true)
+<Text color="#2b9348">
+  ⟐{'   '}
+  <a
+    href="https://docs.google.com/presentation/d/1bVOurJIRBmKorW0jKQe4Roon1j5ToOFt/edit?usp=sharing&ouid=106179897632712562234&rtpof=true&sd=true"
+    target="_blank"
+  >
+    আরবী হরফ দিয়ে শব্দের প্রেসেন্টেশন ডাউনলোড (My First Picture Word Book এর
+    আলোকে)
+  </a>
+</Text>
+
+<ul>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1tymflpdl9L8i0lH0f6BDmc7AwDfhUamT/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      পরিবার-আত্মীয়তা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1MtJirwhf47gWR1Q99HjzBPLtG6Dx2PwD/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      বাসাবাড়ি বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1aVmuAim5-M13Esa7xNDDsJkRASo2OOGV/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      বাথরুম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1Z_EL7Rv6eYE-YPTDxZzu35bQGmWZaNsc/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      রান্নাঘর বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1v26fFgChNagUhLCJ5WiQ1F-Cl7bZkH2a/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      মানবদেহ বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1lSXNJyh2_6nX41te-xAldcRud1Oa3afD/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      খাদ্য বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/16WYyQnrw9LQoUWXoa1YOthN2KSN8gxHB/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      ফল বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1sZ04fgn-U8ANk7Gze8CdcCi8mdUoTt9P/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      শাকসবজি বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1pblm2w3Cq9yK_Cmeo3Ye9AUcUjXCxoFW/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      প্রাণী বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1nA7gLLP_nb_ZClkea2ttR5vOhAjP4g8U/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      পাখি বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1wxWCPyrVYVfAGIeyEflBkfq7AbiQfU8G/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      মাছ, পোকা ও অন্যান্য বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1En5bqqVbenV5rmWYm3EF5-LBSdY8hK8K/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      পোশাক ও সাজসজ্জা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1JHcRFtC-E-8rPnwOhlG28jrH7gpw3geP/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      রঙের নাম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1uFTIM5A5lhceZYLgL2EaflWzSGXvJQ6c/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      যানবাহন বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1t0fw8VcSeMOShh1nLHxusz7aeSE7_5DE/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      রাস্তাঘাট বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1xQ6SI0L_mwTzgz-_sAUc6ciwREH_tFek/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      শিক্ষা বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+  <li>
+    <a
+      href="https://docs.google.com/presentation/d/1VqlY2mJwl1yxPiDu-80vqkNKxiwZ7tpr/edit?usp=sharing&amp;ouid=106179897632712562234&amp;rtpof=true&amp;sd=true"
+      target="_blank"
+    >
+      ধর্ম বিষয়ক শব্দের প্রেসেন্টেশন ডাউনলোড
+    </a>
+  </li>
+</ul>
+
+<Text color="#2b9348">
+  ⟐{'   '}
+  <a
+    href="https://drive.google.com/drive/folders/1RP52Gp4S_Sf7Wc13aVJDmNp57cU2CvR_?usp=sharing"
+    target="_blank"
+  >
+    English Work sheet ডাউনলোড
+  </a>
+</Text>
 
 <Video
   videoSrcURL="https://www.youtube.com/embed/videoseries?list=PLN6GIGge5un9gKYMXvM0YtQrlO5_TlxGA"
